--- a/gb/24/6/27/n14278737.md
+++ b/gb/24/6/27/n14278737.md
@@ -50,12 +50,12 @@
 <p><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288568.md#1" target="_blank" rel="noopener">【名医专栏】回国种牙 VS 澳洲种牙？补骨粉 VS 升级手术?</a></span></strong></p>
 <p><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295434.md#1" target="_blank" rel="noopener">【名医专栏】全口植牙，可以提取养老金是什么意思？</a></span></strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/28/n11616592.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
